[package]
name = "xtensa-lx-rt"
version = "0.5.0"
description = "Low level access for xtensa lx processors"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "lx", "register", "peripheral"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/xtensa-lx-rt"
authors = [
    "Scott Mabin <scott@mabez.dev>", 
    "Arjan Mels <arjan@mels.email>",
    "Robin Appelman <robin@icewind.nl>",
]
edition = "2018"

[dependencies]
r0 = "1.0.0"
bare-metal = { version = "0.2.0", features = ["const-fn"] }
xtensa-lx-rt-proc-macros = { path = "procmacros", version = "=0.1.0" }
freertos-esp32-sys = { git = "https://github.com/N3xed/freertos-esp32-sys.git", optional = true }

[features]
default = ["lx6"]

esp32-freertos = ["freertos-esp32-sys"]
lx6 = []
lx106 = []